<resources>
    <string name="app_name">NApp</string>
    <string name="percent">%</string>
    <string name="quantity_with_unit">%1$s %2$s</string>
    <string name="products">Products</string>
    <string name="products_subtitle">Star Food Products To Pin Them Here</string>
    <string name="categories">Categories</string>
    <string name="categories_subtitle">Tap to Find Products in Categories</string>
    <string name="energy_unit">kcal</string>
    <string name="filter_value">value</string>
    <string name="filter_contains">Contains</string>
    <string name="filter_doesnt_contain">Does Not Contain</string>
    <string name="done">DONE</string>
    <string name="filter_title">Filter Products By Criteria</string>
    <string name="cancel">CANCEL</string>
    <string name="filter">Filter</string>
    <string name="search_empty">There are No Items Matching Your Search</string>
    <string name="action_star">Star Product</string>
    <string name="per_100g">per 100g</string>
    <string name="nutrients">Nutrients</string>
    <string name="quantity">Quantity</string>
    <string name="action_flash">Toggle Flash</string>
    <string name="action_edit">Insert Barcode Manually</string>
    <string name="barcode_title">Enter Barcode Manually</string>
    <string name="no_results">No Results Found</string>
    <string name="scanner_point">Point your camera at a barcode</string>
    <string name="scanner_detected">Barcode detected: %1$d</string>
    <string name="scanner_success">Success</string>
    <string name="scanner_permission">Allow Camera Use</string>
    <string name="favorite_enabled">Product will be added to favorites</string>
    <string name="favorite_disabled">Product will be removed from favorites</string>
</resources>