<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/barcode_title"
        android:textAppearance="@style/TextAppearance.NApp.Headline2"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/barcode_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/filter_value"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        tools:text="beverages" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/done_button"
        app:layout_constraintTop_toBottomOf="@+id/barcode_text" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:enabled="false"
        android:text="@string/done"
        android:textColor="@color/color_button_toggleable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcode_text" />

</androidx.constraintlayout.widget.ConstraintLayout>